--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -1,3 +1,9 @@
+div {
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  margin: 3px;
+}
 #root {
   max-width: 1280px;
   margin: 0 auto;
