adding additional changes

--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -8,7 +8,7 @@ div {
   margin: 3px;
 }
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   text-align: center;
   padding: 0px;
@@ -19,13 +19,18 @@ div {
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
+/* .logo:hover {
   filter: drop-shadow(0 0 2em #fcee09);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #d1cc6d);
+} */
+.logo:hover  {
+  filter: drop-shadow(0 0 2em #fcee09);
 }
-
+p.navBarLabels:hover{
+  filter: drop-shadow(0 0 1em #fcee09);
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -48,13 +53,14 @@ div {
 .read-the-docs {
   color: #888;
 }
-
 .header {
   width: 100%;
   height: 50px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: rgb(47, 52, 56);
+  padding-bottom: 7.5px;
 }
 .logo {
   padding: 5px;
@@ -69,6 +75,7 @@ p.siteNameText {
 }
 .navBarMaster {
   justify-content: flex-end;
+  margin-right: 20px;
 }
 .navBar {
   display: flex;
@@ -96,30 +103,42 @@ p.navBarLabels {
   flex-direction: row;
   justify-content: space-around;
 }
-.collapsedFooterParent {
-  display: flex;
-  flex-direction: column;
-  
-}
 .collapsedFooter {
   width: 100%;
   display: flex;
   flex-direction: row;
+  margin: 0px;
   justify-content: space-around;
+  background-color: rgb(47, 52, 56);
   color: rgb(161, 161, 161);
   position: fixed;
   bottom: 0%;
   left: 0%;
 }
+.collapsedFooterParent {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .sectionLinks, 
 .collapedLinksTitle {
-  width: 10%%;
+  width: 20%;
 }
-.footerLinks, 
-.linksTitle,
+/* .footerLinks, 
 .collapedLinksTitle{
   margin: 10px;
+  text-align: center;
+} */
+.expanded>h3.linksTitle,
+.footerLinks{
+  margin: 10px;
   text-align: left;
+}
+p.hideExpandMessage{
+  margin: 0px;
+}
+.pLink:hover {
+  color: rgb(160, 3, 160);
 }
 .sectionLinks > a,
 .navBar > a,
@@ -127,7 +146,34 @@ p.navBarLabels {
   text-decoration: none;
   color: #fcee09;
 }
-
+.collapedSocialMediaLinks{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.returnPolicyArticle{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 65px;
+}
+.articleDiv{
+  max-width:66%;
+  margin-left: 17.5%;
+  margin-right: 17.5%;
+}
+.sectionHeaders{
+  color: #fcee09;
+  margin-bottom: 7.5px;
+}
+p.body{
+  color: #fcee09;
+  text-align: center;
+}
+.retrunHome{
+  text-decoration: none;
+  color: #fcee09;
+}
 /* Color Schemes: */
 /* Color Theme Swatches in Hex */
 .Cyberpunk-2077-1-hex {
@@ -145,7 +191,6 @@ p.navBarLabels {
 .Cyberpunk-2077-5-hex {
   color: #fafafa;
 }
-
 /* Color Theme Swatches in RGBA */
 /* .Cyberpunk-2077-1-rgba { color: rgba(4, 10, 14, 1); } */
 /* .Cyberpunk-2077-2-rgba { color: rgba(251, 237, 8, 1); } */
