prep work for next styling branch

--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -460,5 +460,10 @@ p.body{
   color: #fcee09;
   color: #c57907;
 }
+/*! -------- FOOTER DOCS STYLING START ------- */
+.sectionHeaders{
 
-
+}
+.bodyContent{
+  
+}
