general save, nothing major

--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -238,6 +238,7 @@ button.regCloseButton{
 .individualItemPageRight{
   display: flex;
   flex-direction: column;
+  margin-left:10px;
 }
 .individualItemPageTitle{
   color: black;
