--- a/eCommerceFE/src/App.css
+++ b/eCommerceFE/src/App.css
@@ -77,18 +77,21 @@ p.siteNameText {
   font-weight: 700;
 }
 .navBarMaster {
-  justify-content: flex-end;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  justify-self: center;
   margin-right: 20px;
 }
 .navBar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-top: 10px;
 }
 p.navBarLabels {
   margin: 10px;
   align-items: flex-end;
-  padding-top:10%;
   padding-bottom:0%;
 }
 /*! -------- REGISTER BANNER STYLING --------- */
